--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,54 +15,34 @@ services:
       - type: volume
         source: node_modules
         target: /home/node/app/nest-app/node_modules
+    depends_on:
+      - postgresql
     networks:
       - pride-project
 
   postgresql:
     env_file: ".env"
     container_name: postgresql
-    user: root
     image: postgres:16.6
     ports:
       - 5432:5432
     volumes:
-      - type: bind
-        source: ./postgres/data
+      - type: volume
+        source: postgres_data
         target: /var/lib/postgresql/data
-      - type: bind
-        source: ./postgres/init
-        target: /docker-entrypoint-initdb.d
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
+      TZ: "Asia/Tokyo"
     hostname: postgres
-    restart: always
-    networks:
-      - pride-project
-
-  pgadmin4:
-    env_file: ".env"
-    user: "${UID}:${GID}"
-    image: dpage/pgadmin4:8.14
-    container_name: pgadmin4
-    ports:
-      - 81:80
-    volumes:
-      - ./pgadmin:/var/lib/pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-    hostname: pgadmin4
-    links:
-      - postgresql
     restart: always
     networks:
       - pride-project
 
 volumes:
   node_modules:
+  postgres_data:
 
 networks:
   pride-project:
